Bug 153891 - Crash in: writerfilter::dmapper::DomainMapperTableHandler::endTable(unsigned int, bool)
Summary: Crash in: writerfilter::dmapper::DomainMapperTableHandler::endTable(unsigned ...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0 all versions
Hardware: x86-64 (AMD64) All
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:7.6.0 target:7.5.2 target:7.4.7
Keywords: bibisected, bisected, regression
Depends on:
Blocks: DOCX-Tables
  Show dependency treegraph
 
Reported: 2023-02-28 23:44 UTC by bluzee
Modified: 2023-03-27 11:01 UTC (History)
3 users (show)

See Also:
Crash report or crash signature: ["writerfilter::dmapper::DomainMapperTableHandler::endTable(unsigned int, bool)"]


Attachments
docx file that crashes LO version 7 but not version 6 (3.11 MB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2023-02-28 23:44 UTC, bluzee
Details
Simplified test document (24.40 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2023-03-01 12:30 UTC, László Németh
Details

Note You need to log in before you can comment on or make changes to this bug.
Description bluzee 2023-02-28 23:44:04 UTC
Created attachment 185654 [details]
docx file that crashes LO version 7 but not version 6

This bug was filed from the crash reporting server and is br-b035b399-77f5-4c0e-8a8d-d0fedd60c4d8.
=========================================

Crash exists since upgrade to LibreOffice 7 when opening attached docx file. First version noticed was 7.3.7.  LibreOffice 6.4.7 does not crash opening this file. Doesn't render it particularly well, but does not crash.
Comment 1 Xisco Faulí 2023-03-01 08:39:30 UTC
Regression introduced by:

author	László Németh <nemeth@numbertext.org>	2020-05-04 13:42:14 +0200
committer	László Németh <nemeth@numbertext.org>	2020-05-04 17:55:28 +0200
commit 81ce88aa80f8e7cde4fdc5b211e9500a3599643c (patch)
tree e343d94d8d304e97b82fe42efaabb810b6f3e04f
parent 224c155d89e4d957c0d566a5aea6004a466d54e9 (diff)
tdf#132514 DOCX import: fix lost table style with footer

Bisected with: bibisect-linux64-7.0

Adding Cc: to László Németh
Comment 2 László Németh 2023-03-01 12:30:38 UTC
Created attachment 185666 [details]
Simplified test document
Comment 3 stragu 2023-03-01 22:54:02 UTC
Windows also affected:

Version: 7.5.0.3 (x86) / LibreOffice Community
Build ID: c21113d003cd3efa8c53188764377a8272d9d6de
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: default; VCL: win
Locale: en-GB (en_GB); UI: en-GB
Calc: threaded
Comment 4 Commit Notification 2023-03-02 21:52:33 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e34074feeb1b918ab9f26a18c5fdb0b1f2e35f94

tdf#153891 DOCX import: crash fix at missing cell properties

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 László Németh 2023-03-02 21:53:12 UTC
Commit description:

tdf#153891 DOCX import: crash fix at missing cell properties

Regression from commit 81ce88aa80f8e7cde4fdc5b211e9500a3599643c
"tdf#132514 DOCX import: fix lost table style with footer".

Note: no crash without this fix by removing styles.xml from
the test document.
Comment 6 Commit Notification 2023-03-03 12:03:43 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/2a7ec5f17e01041418262dcb0229fe537fa8139f

tdf#153891 DOCX import: crash fix at missing cell properties

It will be available in 7.5.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2023-03-06 09:46:20 UTC
László Németh committed a patch related to this issue.
It has been pushed to "libreoffice-7-4":

https://git.libreoffice.org/core/commit/d93c8a047fbb7ace91761bdf8b7b818b5f62aff1

tdf#153891 DOCX import: crash fix at missing cell properties

It will be available in 7.4.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 bluzee 2023-03-06 19:20:47 UTC
Tested in 7.5.2 daily. Does not crash. Resolved.

Version: 7.5.2.0.0+ (X86_64) / LibreOffice Community
Build ID: 7742a400da3e9c8b939542f3b949681596e5547f
CPU threads: 4; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-CA (en_CA.UTF-8); UI: en-US
Calc: threaded
Comment 9 stragu 2023-03-06 20:36:21 UTC
marking as verified by bluzee. Thanks everyone!
Comment 10 NISZ LibreOffice Team 2023-03-27 11:01:20 UTC
Verified in:
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 67bb7f71b785d3d831ffaa47262b6cbd84e71c42
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded