tdf#153891 DOCX import: crash fix at missing cell properties

Regression from commit 81ce88aa80f8e7cde4fdc5b211e9500a3599643c
"tdf#132514 DOCX import: fix lost table style with footer".

Note: no crash without this fix by removing styles.xml from
the test document.

Change-Id: I7fd7edfc8f62e6b17c0c8f7a3bdec7d986ba57eb
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/148053
Tested-by: Jenkins
Reviewed-by: László Németh <nemeth@numbertext.org>
(cherry picked from commit e34074feeb1b918ab9f26a18c5fdb0b1f2e35f94)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/148105
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>